# 6chan

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.c
client/include/: client.h  color.h  fileshare.h  pipe.h
client/src/: client.c  fileshare.c  pipe.c
server/: CMakeLists.txt  main.c
server/include/: controller.h  model.h  pipe.h  service.h
server/src/: controller.c  model.c  pipe.c  service.c
utils/: CMakeLists.txt
utils/include/: list.h  recvbuf.h
utils/src/: list.c  recvbuf.c
